<resources>
    <string name="app_name">Baankalichamuntha</string>
    <string name="title_home">Home</string>
    <string name="title_booking">Booking</string>
    <string name="title_shop">Shop</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="jane_doe">Jane Doe</string>
</resources>