<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.finalproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.finalproject.navigation_shop"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_navigation_shop" />
    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.example.finalproject.navigation_booking"
        android:label="@string/title_booking"
        tools:layout="@layout/fragment_navigation_booking" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.finalproject.navigation_chat"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_navigation_chat" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.finalproject.navigation_profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_navigation_profile" />

</navigation>